# volt

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DIR_TREES.md  DIR_TREES_2.md  LICENSE  build.py  bundle.py  config.json  directory-structure.md  generate_module_main.py  manifest.json  package.json
.volt/: config.json
.volt/cmake/: Volt.cmake
.volt/cmake/toolchains/: WindowsAMD64-WindowsAMD64.cmake
.volt/template/: CMakeLists.txt
app/: app.cpp  pch.hpp
app.bak/: app.cpp  pch.hpp
assets/.lang/pl/volt/: text.json
assets/volt/: text.json
cache/: paths.txt
include.bak/volt/: error.hpp  log.hpp  macros.hpp  modules.inl  paths.hpp  volt.hpp
include.bak/volt/assets/: asset_ref.hpp  asset_ref.inl
include.bak/volt/core/assets/: text.hpp
include.bak/volt/ecs/: ecs.inl  system.hpp  world.hpp
include.bak/volt/gpu/: buffer.hpp  gpu.hpp  graph.hpp  instance.hpp  pass.hpp  resource.inl  swapchain.hpp
include.bak/volt/math/: mat3.hpp  math.hpp  quat.hpp  quat.inl  vec2.inl  vec3.hpp  vec4.hpp  vec4.inl
include.bak/volt/os/: os.hpp
include.bak/volt/util/: file.hpp  smart_ptr_view.inl  string.hpp  string.inl
include/volt/: assert.hpp  config.hpp  error.hpp  instance.hpp  instance.inl  log.hpp  macros.hpp  modules.hpp  modules.inl  serializable.hpp  volt.hpp
include/volt/assets/: asset.hpp  asset_ref.hpp  assets.hpp  assets.inl
include/volt/core/assets/: text.hpp
include/volt/ecs/: component_storage.hpp  component_storage.inl  ecs.hpp  ecs.inl  entity.hpp  entity.inl  entity_manager.hpp  entity_manager.inl  system.hpp  system.inl  world.hpp  world.inl
include/volt/gpu/: adapter.hpp  binding.hpp  buffer.hpp  buffer_view.hpp  device.hpp  enums.hpp  fence.hpp  gpu.hpp  instance.hpp  pass.hpp  pass_graph.hpp  pipeline.hpp  pipeline_builder.hpp  pool.hpp  queue.hpp  resource.hpp  routine.hpp  sampler.hpp  shader.hpp  surface.hpp  swapchain.hpp  texture.hpp  texture_view.hpp
include/volt/math/: mat3.hpp  mat3.inl  math.hpp  math.inl  quat.hpp  quat.inl  vec2.hpp  vec2.inl  vec3.hpp  vec3.inl  vec4.hpp  vec4.inl
include/volt/modules/: instance.hpp  instance.inl  modules.hpp  modules.inl  serializable.hpp
include/volt/os/: monitor.hpp  window.hpp
include/volt/reflection/: builder.hpp  builder.inl  instance.hpp  instance.inl  reflection.hpp  type.hpp  type.inl
include/volt/util/: dynamic_bitset.hpp  file.hpp  optional_shared_ptr_ref.hpp  optional_shared_ptr_ref.inl  smart_ptr_view.hpp  static_block.hpp  string.hpp  string.inl  thread_pool.hpp  timer.hpp  util.hpp  version.hpp
include/volt/video/: adapter.hpp  buffer.hpp  buffer_view.hpp  command_buffer.hpp  command_queue.hpp  device.hpp  enums.hpp  fence.hpp  instance.hpp  monitor.hpp  pipeline.hpp  pipeline_builder.hpp  pool.hpp  queue.hpp  resource.hpp  routine.hpp  shader.hpp  surface.hpp  swapchain.hpp  texture.hpp  texture_view.hpp  video.hpp  window.hpp
include/volt/video/d3d12/: device.hpp  instance.hpp  window.hpp
include/volt/video/vk12/: adapter.hpp  device.hpp  instance.hpp  shader.hpp  swapchain.hpp  vk12.hpp  window.hpp
src.bak/volt/: config.cpp  error.cpp  paths.cpp
src.bak/volt/core/assets/: text.cpp
src.bak/volt/ecs/: ecs.cpp  world.cpp
src.bak/volt/gpu/: resource.cpp  texture.cpp
src.bak/volt/gpu/d3d12/: adapter.cpp.txt  d3d12.cpp.txt  d3d12.hpp  device.hpp  fence.cpp.txt  instance.cpp.txt  pipeline.cpp.txt  pool.cpp.txt  pool.hpp  queue.hpp  routine.hpp  swapchain.hpp
src.bak/volt/gpu/gl46/: adapter.cpp.txt  gl46.hpp  instance.hpp
src.bak/volt/gpu/vk12/: buffer.cpp  device.hpp  graph.hpp  instance.cpp  instance.hpp  pass.hpp  routine.hpp.txt  sampler.cpp  sampler.hpp  shader.hpp  swapchain.hpp
src.bak/volt/util/: string.cpp  timer.cpp
src/volt/: CMakeLists.txt  assert.cpp  config.cpp  error.cpp  log.cpp  modules.cpp  paths.cpp  pch.hpp  volt.cpp  volt_module_main.cpp
src/volt/assets/: asset.cpp  assets.cpp
src/volt/ecs/: component_storage.cpp  ecs.cpp  entity.cpp  entity_manager.cpp  system.cpp  world.cpp
src/volt/gpu/: adapter.cpp  buffer.cpp  device.cpp  gpu.cpp  pass.cpp  routine.cpp  sampler.cpp  shader.cpp  swapchain.cpp
src/volt/gpu/d3d12/: adapter.cpp  adapter.hpp  buffer.cpp  buffer.hpp  d3d12.cpp  d3d12.cpp.txt  d3d12.hpp  device.cpp  device.hpp  fence.cpp  fence.hpp  instance.cpp  instance.hpp  pipeline.hpp  pool.cpp  queue.cpp  queue.hpp  routine.cpp  swapchain.cpp  window.cpp.txt  window.hpp
src/volt/gpu/gl46/: adapter.hpp  gl46.hpp  instance.cpp  instance.cpp.txt  instance.hpp
src/volt/gpu/vk12/: adapter.cpp  adapter.hpp  buffer.cpp  buffer.hpp  device.cpp  device.hpp  fence.cpp  fence.hpp  instance.cpp  instance.hpp  jit.cpp  jit.hpp  pass.cpp  pass.hpp  pass_graph.cpp  pass_graph.hpp  pipeline.hpp  pool.cpp  pool.hpp  queue.cpp  queue.hpp  routine.cpp  routine.cpp.txt  routine.hpp  sampler.cpp  sampler.hpp  shader.cpp  shader.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.cpp.txt  swapchain.hpp  swapchain.hpp.txt  texture.cpp  texture.hpp  texture_view.cpp  texture_view.hpp  vk12.cpp  vk12.hpp
src/volt/include/volt/: volt.hpp
src/volt/modules/: modules.cpp
src/volt/os/: monitor.cpp  window.cpp
src/volt/reflection/: type.cpp
src/volt/util/: dynamic_bitset.cpp  file.cpp  string.cpp  thread_pool.cpp  timer.cpp  version.cpp
src/volt/video/: device.cpp  monitor.cpp  video.cpp  window.cpp
src/volt/video/d3d12/: adapter.cpp  adapter.hpp  d3d12.cpp  d3d12.hpp  device.cpp  device.cpp.txt  device.hpp  fence.cpp  fence.hpp  instance.cpp  instance.hpp  pipeline.cpp.txt  pipeline.hpp  queue.cpp  queue.hpp  shader.cpp  shader.hpp  window.cpp  window.cpp.txt  window.hpp
src/volt/video/vk12/: adapter.cpp  adapter.hpp  buffer.cpp  buffer.hpp  device.cpp  device.hpp  fence.cpp  fence.hpp  instance.cpp  instance.hpp  pipeline.hpp  pool.cpp  pool.hpp  queue.cpp  queue.hpp  routine.cpp  routine.hpp  shader.cpp  shader.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.cpp.txt  swapchain.hpp.txt  texture.cpp  texture.hpp  texture_view.cpp  texture_view.hpp  vk12.cpp  vk12.hpp  window.cpp
